<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LedControl</string>
    <string name="title_section2">Steckdosen</string>
    <string name="title_section1">LEDs</string>
    <string name="menu_settings">Settings</string>
    <string name="nodata">No data</string>
    <string name="title_section3">Alarm</string>
	<string name="title_section4">Profile</string>
	<string name="image_desc_status">Status</string>
	<string name="image_desc_spacer">Spacer</string>
	<string name="menu_voicecmd">Sprachkommando</string>
	<string name="voicecmd">Kommando sprechen</string>
	
	
	<string name="favtitle_text">Favouriten</string>
	
	<string name="no_connection_text">Keine Verbindung</string>
	<string name="connectionurl">Serverurl</string>
	<string name="connectionport">Port</string>
	<string name="connecting1_text">WLAN Aufbau…</string>
	<string name="connecting2_text">Suche Server…</string>
	<string name="connecting3_text">Verbinde…</string>	
	<string name="menu_disconnect">Verbindung beenden</string>
	<string name="btn_connect">Verbinden</string>
		
	<string name="radio_alarm_once">Einmalig</string>
    <string name="radio_alarm_repeating">Wiederholend</string>
    <string name="alarm_day1">Montag</string>
    <string name="alarm_day2">Dienstag</string>
    <string name="alarm_day3">Mittwoch</string>
    <string name="alarm_day4">Donnerstg</string>
    <string name="alarm_day5">Freitag</string>
    <string name="alarm_day6">Samstag</string>
    <string name="alarm_day7">Sonntag</string>
  	<string name="alarmtitle">Alarm</string>
	<string name="alarmprofile">Profilauswahl</string>
  	<string name="alarmsubtitle1">Profil- und Zeitauswahl</string>
	<string name="alarmname">Name</string>
	<string name="alarmtime">Zeit</string>
	<string name="alarmdate">Datum</string>
	<string name="alarmsavebutton">Speichern</string>
	<string name="alarmcreatebutton">Erstellen</string>
	<string name="alarmrmbutton">Entfernen</string>
	<string name="menu_lightcontrol">Licht</string>
	<string name="menu_alarm">Alarm</string>
</resources>