<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/alarmdialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

       	<TextView
            android:id="@+android:id/title"
            style="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/alarmsubtitle1" />

        <RadioGroup
            android:id="@+id/alarmTimes"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioAlarmOnce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_alarm_once" />

            <RadioButton
                android:id="@+id/radioAlarmRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_alarm_repeating" />
        </RadioGroup>


        <EditText
            android:id="@+id/EditTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alarmtime"
            android:inputType="time" >
        </EditText>

        <EditText
            android:id="@+id/EditDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alarmdate"
            android:inputType="date" >
        </EditText>

        <CheckBox
            android:id="@+id/chkAlarmDay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day1" />

        <CheckBox
            android:id="@+id/chkAlarmDay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day2" />

        <CheckBox
            android:id="@+id/chkAlarmDay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day3" />

        <CheckBox
            android:id="@+id/chkAlarmDay4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day4" />

        <CheckBox
            android:id="@+id/chkAlarmDay5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day5" />

        <CheckBox
            android:id="@+id/chkAlarmDay6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day6" />

        <CheckBox
            android:id="@+id/chkAlarmDay7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_day7" />

        <LinearLayout
            android:id="@+id/alarmbuttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ButtonAlarmSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmsavebutton" >
            </Button>

            <Button
                android:id="@+id/ButtonAlarmRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmrmbutton" >
            </Button>
        </LinearLayout>
    </LinearLayout>
