<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connectionstatus"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
        android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
            android:id="@+id/noconnectionhor1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" 
            android:orientation="horizontal" >
            
	    <EditText
	        
	        android:id="@+id/EditConnectionURL"
	        android:layout_width="0dp"
	        android:layout_weight=".70"
	        android:layout_height="wrap_content"
	        android:hint="@string/connectionurl"
	        android:inputType="textUri" >
	    </EditText>
	    
	    <EditText
	        android:id="@+id/EditConnectionPort"
	        android:layout_width="0dp"
	        android:layout_weight=".30"
	        android:layout_height="wrap_content"
	        android:hint="@string/connectionport"
	        android:inputType="number" >
	    </EditText>
	    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noconnectionhor2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" 
        android:orientation="horizontal" >
 
    <TextView
        android:id="@+id/no_connection_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_weight="0.70"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/no_connection_text"
        android:textAppearance="?android:attr/textAppearanceLarge" >

    </TextView>
    
    <Button
        android:id="@+id/ButtonConnect"
        android:layout_weight="0.30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_connect" >

    </Button>
    
     </LinearLayout>
</LinearLayout>